--- a/voiceToTheSilent/src/main/webapp/WEB-INF/templates/voicets/form.html
+++ b/voiceToTheSilent/src/main/webapp/WEB-INF/templates/voicets/form.html
@@ -39,7 +39,7 @@
             margin-left: 10%;
         }
         #forms{
-            padding-top: 5%;
+            padding-top: 3%;
             width: 50%;
             margin-left: auto;
             margin-right: auto;
@@ -62,18 +62,24 @@
     <img id="logo"src="https://i.ibb.co/M8sG2xP/logo.png" alt="imageNotFound">
     <h1 id="titletext">Voice to the silent</h1>
 </div>
-<form id="forms">
+
+<div th:if="${lastAction}" style="height: 80px" class="alert alert-dark alert-dismissible" role="alert">
+    <button type="button" class="close" data-dismiss="alert"><span>&times;</span></button>
+    <strong style="font-size: 20px">Thank you!</strong> <span style="font-size: 20px"th:text="${lastAction}">last action performed</span>
+</div>
+
+<form id="forms" th:object="${godfather}" th:action="@{'/cases/' + ${choiceId}}" method="post">
     <div class="mb-3">
-        <label for="formGroupExampleInput" class="form-label"> Name</label>
-        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Put your name here">
+        <label for="formGroupExampleInput" class="form-label">Name</label>
+        <input type="text" th:field="*{name}" class="form-control" id="formGroupExampleInput" placeholder="Put your name here" >
     </div>
     <div class="mb-3">
         <label for="formGroupExampleInput2" class="form-label">Phone</label>
-        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Put your contact here">
+        <input type="text" th:field="*{contact}" class="form-control" id="formGroupExampleInput2" placeholder="Put your contact here">
     </div>
     <div class="mb-3">
         <label for="formGroupExampleInput2" class="form-label">E-mail</label>
-        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Put your E-mail here">
+        <input type="text" th:field="*{email}" class="form-control" id="formGroupExampleInput2" placeholder="Put your E-mail here">
     </div>
     <div class="input-group mb-3">
         <label class="input-group-text" for="inputGroupSelect01">How will you help?</label>
@@ -83,17 +89,28 @@
             <option value="2">Money</option>
             <option value="3">Donating Goods</option>
             <option value="3">Donating Food</option>
-</form>
-</select>
-</div>
-<div class="container">
-    <div class="row">
-        <div class="col center-text">
-            <button type="button" id="submit" class="btn btn-dark btn-lg download-button"><i class="fas fa-fist-raised"></i> Submit </button>
-            <button type="button" id="home" class="btn btn-dark btn-lg download-button"><i class="fas fa-fist-raised"></i> Home </button>
+        </select>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col center-text">
+                <!--<button type="button" id="submit" class="btn btn-dark btn-lg download-button"><i class="fas fa-fist-raised"></i> Submit </button>-->
+                <input id="submit" class="btn btn-dark btn-lg download-button" type="submit" value="Submit"><i class="fas fa-fist-raised"></i>
+                <a  th:href="@{'/'}"><button type="button" id="home" class="btn btn-dark btn-lg download-button"><i class="fas fa-fist-raised"></i> Home </button></a>
+            </div>
         </div>
     </div>
-</div>
+</form>
+
+<!--<div class="container">
+    <div class="row">
+        <div class="col center-text">
+            &lt;!&ndash;<button type="button" id="submit" class="btn btn-dark btn-lg download-button"><i class="fas fa-fist-raised"></i> Submit </button>&ndash;&gt;
+            <input id="submit" class="btn btn-dark btn-lg download-button" type="submit" value="Submit"><i class="fas fa-fist-raised"></i>
+            <a  th:href="@{'/'}"><button type="button" id="home" class="btn btn-dark btn-lg download-button"><i class="fas fa-fist-raised"></i> Home </button></a>
+        </div>
+    </div>
+</div>-->
 <img id="footer" src="https://i.ibb.co/cvdkLqZ/pam.jpg" alt="imageNotFound" >
 </body>
 </html>
